# hashstash

./: Cargo.toml  README.md
hashstash/: Cargo.toml
hashstash-macros/: Cargo.toml
hashstash-macros/src/: lib.rs
hashstash/src/: lib.rs  test.rs  unstasher.rs
src/: cache.rs  lib.rs  stasher.rs  test.rs  unstasher.rs  valuetypes.rs
