[package]
name = "hashstash"
version = "0.5.0"
edition = "2021"
description = "It's like git but for your Rust data structures."
repository = "https://github.com/timstr/hashstash"
license = "MIT"
keywords = ["hashing", "serialization", "version-control"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahash = "4.1.0"

[dev-dependencies]
rand = "0.8.3"
